--- a/hello-world/dockerfile
+++ b/hello-world/dockerfile
@@ -4,18 +4,28 @@ FROM php:8.0-fpm
 WORKDIR /var/www
 
 # Install dependencies
-RUN apt-get update && apt-get install -y \
-    build-essential \
+RUN apt-get update && apt-get upgrade -y && apt-get install -y \
     libpng-dev \
+    libonig-dev \
+    libxml2-dev \
+    libzip-dev \
     libjpeg62-turbo-dev \
     libfreetype6-dev \
-    locales \
     zip \
-    jpegoptim optipng pngquant gifsicle \
-    vim \
     unzip \
     git \
-    curl
+    curl && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
+# Configure and install PHP extensions
+RUN docker-php-ext-install pdo_mysql && \
+    docker-php-ext-install mbstring && \
+    docker-php-ext-install zip && \
+    docker-php-ext-install exif && \
+    docker-php-ext-install pcntl && \
+    docker-php-ext-configure gd --with-freetype --with-jpeg && \
+    docker-php-ext-install gd
 
 # Clear cache
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
