--- a/hello-world/docker-compose.yml
+++ b/hello-world/docker-compose.yml
@@ -46,7 +46,7 @@ services:
       MYSQL_DATABASE: laravel
       MYSQL_USER: root
       MYSQL_PASSWORD:  
-      MYSQL_ROOT_PASSWORD:  
+      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
       SERVICE_TAGS: dev
       SERVICE_NAME: mysql
     volumes:
