--- a/hello-world/docker-compose.yml
+++ b/hello-world/docker-compose.yml
@@ -44,9 +44,9 @@ services:
       - "3306:3306"
     environment:
       MYSQL_DATABASE: laravel
-      MYSQL_USER: root
-      MYSQL_PASSWORD:  
-      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+      MYSQL_USER: testing
+      MYSQL_PASSWORD:  47xtPYyHpV77
+      MYSQL_ROOT_PASSWORD: 47xtPYyHpV77
       SERVICE_TAGS: dev
       SERVICE_NAME: mysql
     volumes:
