--- a/hello-world/docker-compose.yml
+++ b/hello-world/docker-compose.yml
@@ -26,8 +26,10 @@ services:
     container_name: webserver
     restart: unless-stopped
     tty: true
+    depends_on:
+      - app
     ports:
-      - "9000:80"
+      - "8000:80"
     volumes:
       - ./:/var/www
       - ./nginx/conf.d/:/etc/nginx/conf.d/
