--- a/hello-world/dockerfile
+++ b/hello-world/dockerfile
@@ -1,10 +1,10 @@
-FROM php:8.0-fpm
+FROM php:8.1-fpm
 
 # Set working directory
 WORKDIR /var/www
 
-# Install dependencies
-RUN apt-get update && apt-get upgrade -y && apt-get install -y \
+# Install dependencies and PHP extensions
+RUN apt-get update && apt-get install -y \
     libpng-dev \
     libonig-dev \
     libxml2-dev \
@@ -15,28 +15,12 @@ RUN apt-get update && apt-get upgrade -y && apt-get install -y \
     unzip \
     git \
     curl && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
-
-# Configure and install PHP extensions
-RUN docker-php-ext-install pdo_mysql && \
-    docker-php-ext-install mbstring && \
-    docker-php-ext-install zip && \
-    docker-php-ext-install exif && \
-    docker-php-ext-install pcntl && \
     docker-php-ext-configure gd --with-freetype --with-jpeg && \
-    docker-php-ext-install gd
+    docker-php-ext-install pdo_mysql mbstring zip exif pcntl gd && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Clear cache
-RUN apt-get clean && rm -rf /var/lib/apt/lists/*
-
-# Install extensions
-RUN docker-php-ext-install pdo_mysql mbstring zip exif pcntl
-RUN docker-php-ext-configure gd --with-freetype --with-jpeg
-RUN docker-php-ext-install gd
-
-# Remove existing www files
-RUN rm -rf /var/www/html
+# Install Composer
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 # Copy existing application directory contents
 COPY . /var/www
@@ -44,8 +28,16 @@ COPY . /var/www
 # Copy existing application directory permissions
 COPY --chown=www-data:www-data . /var/www
 
+# Set permissions for storage and bootstrap/cache
+RUN chown -R www-data:www-data /var/www/storage /var/www/bootstrap/cache && \
+    chmod -R 775 /var/www/storage /var/www/bootstrap/cache
+
+# Optionally run composer install, uncomment if needed
+# RUN composer install --no-dev --optimize-autoloader
+
 # Change current user to www
 USER www-data
 
 EXPOSE 9000
 CMD ["php-fpm"]
+
