--- a/hello-world/dockerfile
+++ b/hello-world/dockerfile
@@ -31,7 +31,9 @@ COPY --chown=www-data:www-data . /var/www
 # Set permissions for storage and bootstrap/cache
 RUN chown -R www-data:www-data /var/www/storage /var/www/bootstrap/cache && \
     chmod -R 775 /var/www/storage /var/www/bootstrap/cache
-
+    chown -R www-data:www-data /var/www && \
+    chmod -R 775 /var/www
+    
 # Optionally run composer install, uncomment if needed
 # RUN composer install --no-dev --optimize-autoloader
 
