--- a/hello-world/dockerfile
+++ b/hello-world/dockerfile
@@ -29,11 +29,11 @@ COPY . /var/www
 COPY --chown=www-data:www-data . /var/www
 
 # Set permissions for storage and bootstrap/cache
+USER root
 RUN chown -R www-data:www-data /var/www/storage /var/www/bootstrap/cache && \
     chmod -R 775 /var/www/storage /var/www/bootstrap/cache
-    chown -R www-data:www-data /var/www && \
-    chmod -R 775 /var/www
-    
+USER www-data
+
 # Optionally run composer install, uncomment if needed
 # RUN composer install --no-dev --optimize-autoloader
 
