--- a/hello-world/dockerfile
+++ b/hello-world/dockerfile
@@ -28,10 +28,10 @@ COPY . /var/www
 # Copy existing application directory permissions
 COPY --chown=www-data:www-data . /var/www
 
-# Set permissions for storage and bootstrap/cache
+# Set permissions for storage, bootstrap/cache, and vendor
 USER root
-RUN chown -R www-data:www-data /var/www/storage /var/www/bootstrap/cache && \
-    chmod -R 775 /var/www/storage /var/www/bootstrap/cache
+RUN chown -R www-data:www-data /var/www/storage /var/www/bootstrap/cache /var/www/vendor && \
+    chmod -R 775 /var/www/storage /var/www/bootstrap/cache /var/www/vendor
 USER www-data
 
 # Optionally run composer install, uncomment if needed
