--- a/hello-world/dockerfile
+++ b/hello-world/dockerfile
@@ -19,27 +19,29 @@ RUN apt-get update && apt-get install -y \
     docker-php-ext-install pdo_mysql mbstring zip exif pcntl gd && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Install Composer
+# Install Composer globally
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 # Copy existing application directory contents
 COPY . /var/www
 
-# Copy existing application directory permissions
-COPY --chown=www-data:www-data . /var/www
+# Ensure files are owned by the non-root user
+RUN chown -R www-data:www-data /var/www
 
-# Set permissions for storage, bootstrap/cache, and vendor
-USER root
-RUN chown -R www-data:www-data /var/www/storage /var/www/bootstrap/cache /var/www/vendor && \
-    chmod -R 775 /var/www/storage /var/www/bootstrap/cache /var/www/vendor
+# Switch to www-data user and run composer as www-data
 USER www-data
 
-# Optionally run composer install, uncomment if needed
-# RUN composer install --no-dev --optimize-autoloader
+# Install composer dependencies
+RUN composer install --no-interaction --prefer-dist --no-progress --no-suggest
+
+# Set permissions for storage, bootstrap/cache, and vendor
+# Ensure the www-data user has write permissions
+RUN chmod -R 775 /var/www/storage /var/www/bootstrap/cache /var/www/vendor
 
 # Change current user to www
 USER www-data
 
+# Expose port 9000 and start php-fpm server
 EXPOSE 9000
 CMD ["php-fpm"]
 
