--- a/hello-world/dockerfile
+++ b/hello-world/dockerfile
@@ -3,7 +3,7 @@ FROM php:8.1-fpm
 # Set working directory
 WORKDIR /var/www
 
-# Install system dependencies
+# Install dependencies
 RUN apt-get update && apt-get install -y \
     libpng-dev \
     libonig-dev \
@@ -16,29 +16,30 @@ RUN apt-get update && apt-get install -y \
     git \
     curl
 
-# Clear out the local repository 
-RUN apt-get clean && rm -rf /var/lib/apt/lists/*
-
-# Install PHP extensions
+# Configure and install PHP extensions
 RUN docker-php-ext-configure gd --with-freetype --with-jpeg && \
     docker-php-ext-install pdo_mysql mbstring zip exif pcntl gd
 
-# Install 
+# Clear cache
+RUN apt-get clean && rm -rf /var/lib/apt/lists/*
+
+# Install Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-# Copy 
+# Copy existing application directory contents
 COPY . /var/www
 
-# Change ownership of the application
-USER root
-RUN chown -R www-data:www-data /var/www && \
-    chmod -R 775 /var/www/storage /var/www/bootstrap/cache
+# Change ownership 
+RUN chown -R www-data:www-data /var/www
 
-# Switch back to the www-data user
+# Set permissions for storage, bootstrap/cache, and vendor
+RUN chmod -R 775 /var/www/storage /var/www/bootstrap/cache /var/www/vendor
+
+# Optionally run composer install, uncomment if needed
+# RUN composer install --no-dev --optimize-autoloader
+
+# Change current user to www-data
 USER www-data
 
-# Expose port 9000 and start php-fpm server
 EXPOSE 9000
 CMD ["php-fpm"]
-
-
