--- a/hello-world/dockerfile
+++ b/hello-world/dockerfile
@@ -29,17 +29,16 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
 # Copy existing application directory contents
 COPY . /var/www
 
-# Change ownership 
-RUN chown -R www-data:www-data /var/www
+# Change ownership and permissions
+RUN chown -R www-data:www-data /var/www && \
+    find /var/www -type d -exec chmod 755 {} \; && \
+    find /var/www -type f -exec chmod 644 {} \;
 
-# Set permissions for storage, bootstrap/cache, and vendor
-RUN chmod -R 775 /var/www/storage /var/www/bootstrap/cache /var/www/vendor
-
-# Optionally run composer install, uncomment if needed
-# RUN composer install --no-dev --optimize-autoloader
-
-# Change current user to www-data
+# Set user
 USER www-data
+
+# Run composer install
+RUN composer install --no-dev --optimize-autoloader
 
 EXPOSE 9000
 CMD ["php-fpm"]
