--- a/hello-world/.env
+++ b/hello-world/.env
@@ -2,14 +2,14 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:bgjbUkIhdR/CTRS+aOkLkue2i92OIW3S5aUvhk7+alM=
 APP_DEBUG=true
-APP_URL=http://localhost:9000
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=root
