--- a/hello-world/nginx/conf.d/default.conf
+++ b/hello-world/nginx/conf.d/default.conf
@@ -2,7 +2,7 @@ server {
     listen 8000;
     server_name localhost;
 
-    root /public;
+    root /var/www/public;
     index index.php index.html index.htm;
 
     location / {
