--- a/hello-world/docker-compose.yml
+++ b/hello-world/docker-compose.yml
@@ -14,6 +14,9 @@ services:
       - ./php/local.ini:/usr/local/etc/php/conf.d/local.ini
     networks:
       - app-network
+    command: >
+      bash -c "chmod -R 775 /var/www/storage /var/www/bootstrap/cache && php-fpm"
+
   webserver:
     image: nginx:alpine
     container_name: webserver
@@ -22,12 +25,13 @@ services:
     depends_on:
       - app
     ports:
-      - "8000:8000"
+      - "8000:80"  # Map the container's port 80 to host's port 8000
     volumes:
       - ./:/var/www
       - ./nginx/conf.d/:/etc/nginx/conf.d/
     networks:
       - app-network
+
   db:
     image: mysql:5.7
     container_name: db
