--- a/hello-world/dockerfile
+++ b/hello-world/dockerfile
@@ -21,7 +21,7 @@ RUN docker-php-ext-configure gd --with-freetype --with-jpeg && \
     docker-php-ext-install pdo_mysql mbstring zip exif pcntl gd
 
 # Clear cache
-RUN apt-get clean && rm -rf /var/lib/apt/lists/*
+RUN apt-get clean and rm -rf /var/lib/apt/lists/*
 
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
@@ -29,8 +29,10 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
 # Copy existing application directory contents
 COPY . /var/www
 
-# Optionally run composer install, uncomment if needed
-# RUN composer install --no-dev --optimize-autoloader
+# Run composer install and set permissions
+RUN composer install --no-dev --optimize-autoloader && \
+    chmod -R 775 storage bootstrap/cache && \
+    if [ -d "vendor" ]; then chmod -R 775 vendor; fi
 
 # Expose port 9000 and start php-fpm server
 EXPOSE 9000
