--- a/hello-world/dockerfile
+++ b/hello-world/dockerfile
@@ -21,7 +21,7 @@ RUN docker-php-ext-configure gd --with-freetype --with-jpeg && \
     docker-php-ext-install pdo_mysql mbstring zip exif pcntl gd
 
 # Clear cache
-RUN apt-get clean and rm -rf /var/lib/apt/lists/*
+RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
