--- a/hello-world/dockerfile
+++ b/hello-world/dockerfile
@@ -26,16 +26,19 @@ RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
+# Copy existing application directory contents
 COPY . /var/www
-
 
 RUN chown -R root:root /var/www/storage /var/www/bootstrap/cache /var/www/vendor
 
-
+# Set permissions
 RUN chmod -R 775 /var/www/storage /var/www/bootstrap/cache /var/www/vendor
 
 # Optionally run composer install, uncomment if needed
 # RUN composer install --no-dev --optimize-autoloader
+
+# Change to non-root 
+USER www-data
 
 # Expose port 9000 and start php-fpm server
 EXPOSE 9000
