--- a/hello-world/dockerfile
+++ b/hello-world/dockerfile
@@ -29,16 +29,14 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
 # Copy existing application directory contents
 COPY . /var/www
 
-RUN chown -R root:root /var/www/storage /var/www/bootstrap/cache /var/www/vendor
+# Run Composer Install
+RUN composer install --no-dev --optimize-autoloader
 
-# Set permissions
+# Change ownership to www-data
+RUN chown -R www-data:www-data /var/www
+
+# Set permissions for storage, bootstrap/cache, and vendor directories
 RUN chmod -R 775 /var/www/storage /var/www/bootstrap/cache /var/www/vendor
-
-# Optionally run composer install, uncomment if needed
-# RUN composer install --no-dev --optimize-autoloader
-
-# Change to non-root 
-USER www-data
 
 # Expose port 9000 and start php-fpm server
 EXPOSE 9000
