--- a/hello-world/docker-compose.yml
+++ b/hello-world/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./nginx/conf.d/:/etc/nginx/conf.d/
+      - ./nginx/conf.d/:/var/www/nginx/conf.d/
     networks:
       - app-network
 
