--- a/hello-world/docker-compose.yml
+++ b/hello-world/docker-compose.yml
@@ -23,9 +23,9 @@ services:
     depends_on:
       - app
     ports:
-      - "8000:80"
+      - "8000:8000"
     volumes:
-      - ./nginx/conf.d/:/etc/nginx/conf.d/
+      - ./nginx/conf.d/:/var/www/nginx/conf.d/
     networks:
       - app-network
 
