--- a/hello-world/.env
+++ b/hello-world/.env
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:bgjbUkIhdR/CTRS+aOkLkue2i92OIW3S5aUvhk7+alM=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
