--- a/hello-world/dockerfile
+++ b/hello-world/dockerfile
@@ -32,6 +32,9 @@ COPY . /var/www
 # Run Composer Install
 RUN composer install --no-dev --optimize-autoloader
 
+# Change ownership to www-data
+RUN chown -R www-data:www-data /var/www
+
 # Set permissions for storage, bootstrap/cache, and vendor directories
 RUN chmod -R 775 /var/www/storage /var/www/bootstrap/cache /var/www/vendor
 
