--- a/hello-world/nginx/conf.d/default.conf
+++ b/hello-world/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 8000;
-    server_name localhost;
-
+    server_name _;
+    
     root /var/www/public;
     index index.php index.html index.htm;
 
