--- a/hello-world/nginx/conf.d/default.conf
+++ b/hello-world/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 8000;
-    server_name _;
-    
+    server_name localhost;
+
     root /var/www/public;
     index index.php index.html index.htm;
 
@@ -10,7 +10,7 @@ server {
     }
 
     location ~ \.php$ {
-        try_files $uri /index.php =404;
+
         fastcgi_pass app:9000;
         fastcgi_index index.php;
         fastcgi_buffers 16 16k;
